2006-08-19  James R. Van Zandt  <jrvz@comcast.net>

	* term/cgm.trm: update email address

2006-08-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c: One half of the definition of clip_fill was 
	inadvertently omitted from the patch of 2006-06-04. This fix allows the
	improved clipping to apply to all filled curves, whereas without it the
	new clipping code only checked for "closed" filled curves.

2006-08-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gadgets.h: Initialize default histogram title structure to use
	character units for the title offset. Fixes spurious error if the
	y axis is log scale.

2006-08-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (do_key_sample): Check for terminal support of 
	term->filled_polygon before using it to draw a key sample. Fixes
	segfault in epson driver (and probably others) if a filled area
	is assigned an RGB color.
	Bugfix.

	* src/eval.c (update_gpval_variables): Test for term==NULL, and if so
	return without doing anything. This prevents a segfault. However, why
	does the program not trigger a similar segfault elsewhere?
	Bug #1540398

2006-08-13  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Clarify the argument required by exists(), and
	provide an example of passing it a string variable containing the
	name of another udv (possibly useful in conjunction with macros).

2006-08-13  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/doc2tex.c (puttex): Don't split index words at - or _; replace
	_ by space.

2006-08-11  Ethan A Merritt  <merritt@u.washington.edu>

	* term/PostScript/prologue.ps: Remove comment with my name in it.
	Further tweak to the PatternBgnd macro.

2006-08-12  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/PostScript/cp437.ps term/PostScript/cp850.ps 
	term/PostScript/koi8r.ps: Remove superfluous C comment characters.

	* term/PostScript/cp852.ps: Remove my info.

2006-08-11  Timothee Lecomte  <timothee.lecomte@ens.fr>
